misc/envoy-manul-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-manul-proxy
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: envoy-manul-proxy
  ports:
    - port: 8081
