misc/server-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: manul
  namespace: default
  labels:
    app: manul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manul
  template:
    metadata:
      annotations:
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"      
      labels:
        app: manul
    spec:
      containers:
      - name: server
        image: ko://github.com/mhbvr/manul/server
        args:
          - '-host=0.0.0.0'
          - '-db-type=bolt'
          - '-db=/manul/bolt.db'
        ports:
          - containerPort: 8081
        resources:
          limits:
            cpu: 1
            memory: 500Mi
          requests:
            cpu: 1
            memory: 500Mi
        volumeMounts:
          - name: storage
            mountPath: /manul/
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: manul-server-storage
