misc/webstor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webstor
  namespace: default
  labels:
    app: webstor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webstor
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: webstor
    spec:
      containers:
      - name: webstor
        image: ko://github.com/mhbvr/manul/webstor
        args:
          - '-storage=/data'
          - '-addr=:8080'
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: 1
            memory: 256Mi
          requests:
            cpu: 1
            memory: 256Mi
        volumeMounts:
          - name: shared-storage
            mountPath: /data
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-storage
